# openproject-visionx

./: README.md  open_project_synthetic_data.ipynb  openproject-visionx.ipynb  readme.txt  requirements.txt
.ipynb_checkpoints/: main-checkpoint.ipynb
code/: final_code.ipynb
code/trials/: checkpoint_1.ipynb
code/trials/wrong_attempt/: config.example.json
code/trials/wrong_attempt/outputs/: smoke.npy
code/trials/wrong_attempt/outputs/gradio_models/: reconstruction_4b1c13d35a6e479fa54fc7c47b5fdbb2.ply  reconstruction_5a66621150a946598d59a0fff8cc3643.ply  reconstruction_f9e0da14754a45d78d355437c6824281.ply
code/trials/wrong_attempt/src/multiview_3d_reconstruction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
code/trials/wrong_attempt/src/reconstruction3d/: __init__.py
final/: README.md  config.pointcloud.json  pyproject.toml
final/outputs/: test_open3d_mesh.ply  test_open3d_pointcloud.ply
final/outputs/gradio_models/: reconstruction_0717e5cf1e4341709cb37c93c39cd67e.ply  reconstruction_1d787244bc5f4d2b8bebd9d5a09a2768.ply  reconstruction_9d0806fc63504fd19424525e3aa20dac.ply
final/src/multiview_3d_reconstruction.egg-info/: requires.txt  top_level.txt
final/src/reconstruction3d/: app.py  config.py  data.py  infer.py  model.py  train.py  utils.py
results/: model.ply  predicted_voxel_sample.npy
